Расставила пробелы и табуляцию в соответствии с настройками Code Style.